add marker cluster

--- a/src/app/main/online/online.component.html
+++ b/src/app/main/online/online.component.html
@@ -25,15 +25,19 @@
                     <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false"
                         [zoomControl]="false" (mapClick)="mapClicked($event)">
 
-                        <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m.label, i)"
-                            [latitude]="m.lat" [longitude]="m.lng" [label]="m.label" [markerDraggable]="m.draggable"
-                            (dragEnd)="markerDragEnd(m, $event)">
+                        <agm-marker-cluster [minimumClusterSize]="5" [styles]="clusterStyles"
+                        [imagePath]="'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQZ06Wh8dKlZHS0hja_9YcxkI3e4t_DNbSgONoYmYB05R6ACsdMA&s'">
+                            <agm-marker-with-label *ngFor="let m of markers; let i = index"
+                                (markerClick)="clickedMarker(m.label, i)" [latitude]="m.lat" [longitude]="m.lng"
+                                [label]="m.label" labelContent="m.label" [markerDraggable]="m.draggable" (dragEnd)="markerDragEnd(m, $event)">
 
-                            <agm-info-window>
-                                <strong>InfoWindow content</strong>
-                            </agm-info-window>
+                                <agm-info-window>
+                                    <strong>InfoWindow content</strong>
+                                </agm-info-window>
 
-                        </agm-marker>
+                            </agm-marker>
+                        </agm-marker-cluster>
+
 
                         <agm-circle [latitude]="lat + 0.3" [longitude]="lng" [radius]="50000" [fillColor]="'red'"
                             [circleDraggable]="true" [editable]="true">
